# weaviate-autogen

./: .dockerignore  Dockerfile  README.md  docker-compose.legacy.yml  docker-compose.yml  jest.config.ts  next.config.ts  package-lock.json  package.json  todo  tsconfig.json
backend/: .gitignore  DATABASE_SETUP.md  DEPENDENCY_INJECTION_GUIDE.md  Dockerfile  README.md  TSNE_README.md  alembic.ini  basic.py  container.py  example.py  example_tsne_usage.py  example_usage.py  human_in_the_loop.py  main.py  manager.py  model_config.example.yaml  model_paper.py  models.py  openapi.json  provider.py  pyproject.toml  robin.py  search.py  server.py  server_di.py  simple_test.py  team_history.json  team_state.json  test_session.py  tools.py
backend/adapter/: history.py  session_history.py  session_team_state.py  storage.py  team.py  team_state.py
backend/alembic/: env.py
backend/alembic/versions/: 162a9eedd725_add_websocket_session_and_message_tables.py  c70db0e27b97_initial_migration_with_user_paper_and_.py
backend/lib/: model_config.py
backend/lib/sklearn/: tsne.py
backend/lib/sqlalchemy/: db.py  seed.py  sqlalchemy_models.py
backend/lib/tools/: brave_tools.py  sample.py  weaviate_tools.py
backend/lib/weaviate/: get_all.py
backend/misc/: magnetic_one.py  robin.py
backend/misc/database/: autogen_integration.py  models.py  peewee.py  (+1 more)
backend/models/: __init__.py  chunk.py  paper.py  websocket.py
backend/routers/: history.py  session.py  tsne.py  websocket.py
backend/tools/: arxiv_tools.py  weaviate_tools.py
backend/ws_example/: app_team.html  team.py
(+181 files in other folders)
