[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "arxiv>=2.2.0",
    "autogen-agentchat>=0.6.2",
    "autogen-ext[openai]>=0.6.2",
    "fastapi>=0.116.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "result>=0.17.0",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
    "weaviate-client>=4.15.4",
]
